--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>This is document title</title>
    </head>	
    <body>
-      <h1>This is a heading</h1>
+      <h1>This is a index page</h1>
       <p>Hello World!</p>
    </body>	
 </html>
